# DRIMAPS

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_PUBLISHING.md  app.py  pyproject.toml  reproduce.sh  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml
analysis/: make_paper_assets.py  paper_numbers.py
baselines/: __init__.py  common.py  naive_dr.py  pibt.py  prevention_only.py
benchmarks/: README.md
experiments/: deadlock_types.py  generate_instances.py  run_benchmark.py  sim_benchmark.py  sim_crossval.py
results/: ablation_highN.csv  benchmark_latest.csv  deadlock_types.json  sim_benchmark.json
sim/: __init__.py  benchmark.py  deadlock_monitor.py  env_config.py  environment.py  grid_world.py  map_registry.py  metrics.py  pettingzoo_env.py  rendering.py  wrappers.py
src/: __init__.py  config.py  cycle_detector.py  deadlock_classifier.py  dependency_graph.py  drimaps.py  execution.py  local_repair.py  movingai.py  priority_manager.py  reactive_core.py  utils.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_baselines.py  test_cycle_detector.py  test_deadlock_monitor.py  test_dependency_graph.py  test_drimaps.py  test_environment.py  test_execution.py  test_movingai.py  test_pettingzoo_env.py  test_sim_collisions.py
visualization/: _demo_compact.json  animate_execution.py  build_visualizer.py  demo_data.json  drimaps_visualizer.html  export_demo.py  visualize_deadlocks.py
